minor(cache): fix query paths to optional and db stuff
