# packages/crates/server/openapi.yaml
@@ -77,7 +77,7 @@ paths:
   /prompt/{id}:
     get:
       tags: []
-      summary: Get prompt
+      summary: Get entire prompt with option to include metadata
       operationId: get_prompt
       parameters:
       - name: id
@@ -86,6 +86,12 @@ paths:
         required: true
         schema:
           type: string
+      - name: metadata
+        in: query
+        description: Whether to include metadata in the response
+        required: false
+        schema:
+          type: boolean
       responses:
         '200':
           description: Successly retrieved prompt
@@ -123,7 +129,7 @@ paths:
       - name: latest
         in: query
         description: Latest version of the prompt
-        required: true
+        required: false
         schema:
           type: boolean
       responses:
@@ -152,7 +158,7 @@ paths:
       - name: from
         in: query
         description: The pagination offset to start from (0-based)
-        required: true
+        required: false
         schema:
           type: integer
           format: int32
@@ -160,7 +166,7 @@ paths:
       - name: to
         in: query
         description: The pagination offset to end at (exclusive)
-        required: true
+        required: false
         schema:
           type: integer
           format: int32
@@ -168,7 +174,7 @@ paths:
       - name: size
         in: query
         description: The number of prompts to return
-        required: true
+        required: false
         schema:
           type: integer
           format: int32
